[tool.poetry]
name = "hypster"
version = "0.2.33"
description = "A flexible configuration system for Python projects"
authors = ["Gilad Rubin <me@giladrubin.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gilad-rubin/hypster"
keywords = ["configuration", "ai", "machine-learning"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.0"
ipywidgets = { version = ">=8.0.0", optional = true }

[tool.poetry.extras]
jupyter = ["ipywidgets"]
dev = ["pytest", "ruff", "mypy", "ipywidgets"]

[tool.poetry.dev-dependencies]
pytest = "^6.0"
ruff = "^0.1.0"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
strict_optional = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F841", "F811", "F821"]

[tool.ruff.lint.isort]
known-first-party = ["hypster"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
