[project]
name = "hypster"
version = "0.3.0"
description = "A flexible configuration system for Python projects"
authors = [
    {name = "Gilad Rubin", email = "me@giladrubin.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["configuration", "ai", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
]

[project.optional-dependencies]
jupyter = ["ipywidgets>=8.0.0"]
dev = [
    "pytest>=6.0",
    "ruff>=0.1.0",
    "mypy>=0.950",
    "ipywidgets>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/gilad-rubin/hypster"
Repository = "https://github.com/gilad-rubin/hypster"
Issues = "https://github.com/gilad-rubin/hypster/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
ignore_missing_imports = true
strict_optional = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F841", "F811", "F821"]

[tool.ruff.lint.isort]
known-first-party = ["hypster"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
