[metadata]
name = HyPSTER
version = 0.0.3
description = HyPSTER is a brand new Python package that helps you find compact and accurate ML Pipelines while staying light and efficient
long_description = file:README.md
long_description_content_type = text/markdown
author = Gilad Rubin
author-email = gilad.rubin@gmail.com
home-page = https://github.com/gilad-rubin
license = MIT
license_files = LICENSE.txt
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.7

setup_requires =
    setuptools >=38.3.0

install_requires=[
	category-encoders>=2.1.0,
	numpy>=1.18.0,
	optuna>=0.19.0,
	pandas>=0.25.0,
	scikit-learn>=0.22.0,
	scipy>=1.4.1,
	cma>=2.7.0,
	xgboost>=0.90,
	lightgbm>=2.3.1
	]
tests_require = pytest