[project]
name = "hypster-jupyterlab-host-harness"
version = "0.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "anywidget>=0.9,<0.12",
    "jupyterlab==4.5.9",
    "jupyterlab-widgets>=3,<4",
    "notebook==7.5.7",
    "playwright>=1.55,<2",
    "pytest>=8,<10",
]

[tool.pytest.ini_options]
addopts = "-q -s"
testpaths = ["."]
